Fix: Corrigir configuração DATABASE_URL no vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
     }
   },
   "env": {
-    "DATABASE_URL": "@database_url"
+    "DATABASE_URL": "$DATABASE_URL"
   },
   "regions": ["gru1"],
   "buildCommand": "npx prisma generate"
