--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "joi": "^17.11.0",
-    "prisma": "^5.7.1"
+    "prisma": "^5.7.1",
+    "puppeteer": "^24.10.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
