--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "db:studio": "npx prisma studio",
     "db:push": "npx prisma db push",
     "db:seed": "node prisma/seed.js",
-    "test": "echo \"No tests specified\" && exit 0"
+    "test": "echo \"No tests specified\" && exit 0",
+    "test:pdf": "node tests/pdf.test.js"
   },
   "keywords": [
     "ubsf",
