--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^5.7.1",
+    "chrome-aws-lambda": "10.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "joi": "^17.11.0",
     "prisma": "^5.7.1",
-    "puppeteer": "^24.10.0"
+    "puppeteer": "^24.10.0",
+    "puppeteer-core": "10.4.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
