--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Aplicação para gerenciamento de cronogramas de atividades para UBSFs",
   "main": "api/health.js",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "cross-env NODE_ENV=development node server.js",
     "start": "node server.js",
     "vercel:dev": "vercel dev",
     "build": "vercel build",
@@ -15,7 +15,7 @@
     "db:push": "npx prisma db push",
     "db:seed": "node prisma/seed.js",
     "test": "echo \"No tests specified\" && exit 0",
-    "test:pdf": "node tests/pdf.test.js"
+    "test:pdf": "cross-env NODE_ENV=development node tests/pdf.test.js"
   },
   "keywords": [
     "ubsf",
@@ -34,12 +34,13 @@
     "express": "^4.18.2",
     "joi": "^17.11.0",
     "prisma": "^5.7.1",
-    "puppeteer": "^24.10.0",
     "puppeteer-core": "10.4.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
-    "@vercel/node": "^3.0.12"
+    "@vercel/node": "^3.0.12",
+    "cross-env": "^7.0.3",
+    "puppeteer": "^24.10.0"
   },
   "engines": {
     "node": ">=18.0.0"
