--- a/package.json
+++ b/package.json
@@ -29,20 +29,20 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^5.7.1",
-    "chrome-aws-lambda": "10.1.0",
+    "chrome-aws-lambda": "6.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "joi": "^17.11.0",
     "prisma": "^5.7.1",
-    "puppeteer-core": "10.4.0"
+    "puppeteer-core": "6.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@vercel/node": "^3.0.12",
     "cross-env": "^7.0.3",
-    "puppeteer": "^24.10.0"
+    "puppeteer": "^6.0.0"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=14.0.0 <15.0.0"
   }
 }
