--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "db:push": "npx prisma db push",
     "db:seed": "node prisma/seed.js",
     "test": "echo \"No tests specified\" && exit 0",
-    "test:pdf": "cross-env NODE_ENV=development node tests/pdf.test.js"
+    "test:pdf": "cross-env NODE_ENV=development node tests/pdf.test.js",
+    "postinstall": "npx puppeteer browsers install chrome"
   },
   "keywords": [
     "ubsf",
@@ -29,20 +30,18 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^5.7.1",
-    "chrome-aws-lambda": "6.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "joi": "^17.11.0",
     "prisma": "^5.7.1",
-    "puppeteer-core": "6.0.0"
+    "puppeteer": "^22.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@vercel/node": "^3.0.12",
-    "cross-env": "^7.0.3",
-    "puppeteer": "^6.0.0"
+    "cross-env": "^7.0.3"
   },
   "engines": {
-    "node": ">=14.0.0 <15.0.0"
+    "node": "22.x"
   }
 }
