--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^5.7.1",
+    "@sparticuz/chromium": "^123.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "joi": "^17.11.0",
     "prisma": "^5.7.1",
-    "puppeteer": "^22.0.0"
+    "puppeteer-core": "^22.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
