--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,8 @@
   "version": 2,
   "functions": {
     "api/**/*.js": {
-      "runtime": "@vercel/node@3.0.12"
+      "runtime": "@vercel/node@3.0.12",
+      "maxDuration": 60
     }
   },
   "regions": ["gru1"],
