--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "db:seed": "node prisma/seed.js",
     "test": "echo \"No tests specified\" && exit 0",
     "test:pdf": "cross-env NODE_ENV=development node tests/pdf.test.js",
-    "postinstall": "npx puppeteer browsers install chrome"
+    "postinstall": "npx puppeteer browsers install chrome",
+    "seed:maio2025": "node scripts/seed-maio-2025.js",
+    "seed:junho2025": "node scripts/seed-junho-2025.js"
   },
   "keywords": [
     "ubsf",
@@ -32,6 +34,7 @@
     "@prisma/client": "^5.7.1",
     "@sparticuz/chromium": "^123.0.0",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "express": "^4.18.2",
     "joi": "^17.11.0",
     "prisma": "^5.7.1",
