--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "express": "^4.18.2",
     "joi": "^17.11.0",
     "prisma": "^5.7.1",
-    "puppeteer-core": "^22.0.0"
+    "puppeteer-core": "^22.0.0",
+    "axios": "^1.6.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
