--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,25 @@
       "runtime": "@vercel/node@3.0.12"
     }
   },
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET, POST, PUT, DELETE, OPTIONS"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "Content-Type, Authorization, X-Requested-With"
+        }
+      ]
+    }
+  ],
   "regions": ["gru1"],
   "buildCommand": "npx prisma generate",
   "outputDirectory": "."
