--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^5.7.1",
+    "@sparticuz/chromium": "^123.0.0",
+    "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
@@ -39,7 +41,7 @@
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.7.1",
-    "axios": "^1.6.0"
+    "puppeteer-core": "^22.11.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -48,6 +50,7 @@
     "@vercel/node": "^3.0.12",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
+    "puppeteer": "^22.11.0",
     "supertest": "^6.3.3"
   },
   "engines": {
