--- a/vercel.json
+++ b/vercel.json
@@ -1,30 +1,12 @@
 {
-  "version": 2,
   "functions": {
     "api/**/*.js": {
-      "runtime": "@vercel/node@3.0.12"
+      "runtime": "nodejs18.x"
     }
   },
-  "headers": [
-    {
-      "source": "/api/(.*)",
-      "headers": [
-        {
-          "key": "Access-Control-Allow-Origin",
-          "value": "*"
-        },
-        {
-          "key": "Access-Control-Allow-Methods",
-          "value": "GET, POST, PUT, DELETE, OPTIONS"
-        },
-        {
-          "key": "Access-Control-Allow-Headers",
-          "value": "Content-Type, Authorization, X-Requested-With"
-        }
-      ]
-    }
-  ],
+  "env": {
+    "DATABASE_URL": "@database_url"
+  },
   "regions": ["gru1"],
-  "buildCommand": "npx prisma generate",
-  "outputDirectory": "."
+  "buildCommand": "npx prisma generate"
 }
