--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,16 @@
 {
   "functions": {
     "api/**/*.js": {
-      "maxDuration": 30
+      "maxDuration": 30,
+      "memory": 1024
+    },
+    "api/cronogramas/[id]/pdf.js": {
+      "maxDuration": 60,
+      "memory": 3008
+    },
+    "api/cronogramas/[id]/pdf-puppeteer.js": {
+      "maxDuration": 60,
+      "memory": 3008
     }
   },
   "headers": [
