--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,9 @@
       "memory": 3008
     }
   },
+  "env": {
+    "NODE_ENV": "production"
+  },
   "headers": [
     {
       "source": "/api/(.*)",
