--- a/vercel.json
+++ b/vercel.json
@@ -6,11 +6,23 @@
     },
     "api/cronogramas/[id]/pdf.js": {
       "maxDuration": 60,
-      "memory": 3008
+      "memory": 1600
     },
     "api/cronogramas/[id]/pdf-puppeteer.js": {
       "maxDuration": 60,
-      "memory": 3008
+      "memory": 1600,
+      "excludeFiles": [
+        "node_modules/puppeteer/**",
+        "node_modules/@types/**",
+        "node_modules/jest/**",
+        "node_modules/supertest/**",
+        "tests/**",
+        "scripts/**",
+        "prisma/migrations/**",
+        ".git/**",
+        "*.md",
+        "*.test.js"
+      ]
     }
   },
   "env": {
