fix: correct vercel.json configuration issues
- Add official Vercel schema for validation
- Simplify function configurations to avoid conflicts
- Remove problematic excludeFiles configuration
- Simplify CORS headers to avoid deployment issues
- Update build script to be more Vercel-compatible
- Remove redundant environment variables
- Fix deployment configuration based on Vercel docs

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "cross-env NODE_ENV=development node server.js",
     "start": "node server.js",
     "vercel:dev": "vercel dev",
-    "build": "npm run db:generate:safe",
+    "build": "npx prisma generate",
     "deploy": "vercel --prod",
     "db:migrate": "npx prisma migrate dev",
     "db:generate": "npx prisma generate",
